# codex-pdf

./: .gitignore  APPROVALS.md  CAMPAIGN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  pyproject.toml  railway.speculator.toml  railway.toml  railway.vision.toml
.cursor/rules/: service-ownership.mdc
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
.windsurf/rules/: service-ownership.md
clients/ts/: README.md  package-lock.json  package.json  tsconfig.json
clients/ts/src/: color.ts  index.test.ts  index.ts
codex-edge/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
codex-edge/.github/workflows/: deploy.yml
codex-edge/src/: cache_key.ts  env.ts  index.ts  sse_tee.ts
codex-edge/src/handlers/: extract.ts  probe.ts
codex-edge/test/: cache_key.test.ts
docs/: architecture.md  backward-compatibility.md  cleanup-stop-gates.md  cli.md  contract.md  deploy.md  discovery-audit.md  migration-plan.md  parity.md  policies.md  preflight-ingest.md  release-1.0.0.md  service-ownership-contract.md  slos.md  unified-extraction.md
docs/operations/: codex-change-ripple.md  marketing-deploy-template.md
reports/: dieline_calibration_report.json
reports/audit/: mislocated-closure.json  produce_surface.json
reports/parity/: codex_deep.json  codex_inventory.json  codex_summary.json  criterion4_parser_surface.json  pdfx4_inventory.json  pdfx4_summary.json  render_baseline.json  viewer_essentials.json
schemas/: CHANGELOG.md
schemas/v1/: codex-annotation.schema.json  codex-box.schema.json  codex-clause-failure.schema.json  codex-color-space.schema.json  codex-conformance-verdict.schema.json  codex-detected-barcode.schema.json  codex-detected-language.schema.json  codex-detected-logo.schema.json  codex-detected-symbol.schema.json  codex-detected-text-region.schema.json  codex-document.schema.json  codex-font.schema.json  codex-form-xobject.schema.json  codex-image.schema.json  codex-issue.schema.json  codex-ocg.schema.json  codex-output-intent.schema.json  codex-page-object.schema.json  codex-page.schema.json  codex-preflight-report.schema.json  codex-source.schema.json  codex-spot-colorant.schema.json  codex-transparency-tree.schema.json  codex-trap-evidence.schema.json  codex-warning.schema.json  probe.schema.json
scripts/: calibrate_dieline_heuristics.py  parity_viewer_essentials.py  produce_surface_audit.py
src/codex_pdf/: __init__.py  cli.py  parity.py  schema.py  version.py
src/codex_pdf/ai/: __init__.py  barcodes.py  budget.py  cache.py  classification.py  claude.py  context.py  dispatcher.py  language.py  logos.py  spell.py  symbols.py  trap_zones.py  versions.py
src/codex_pdf/api/: __init__.py  auth.py  blob_store.py  cache.py  main.py  rate_limit.py  renders_index.py  retention.py  url_ingest.py  warmup.py
src/codex_pdf/client/: __init__.py  http_client.py
src/codex_pdf/color/: __init__.py  alt_space.py  color_math.py  curated.py  normalize.py  pantone.py  resolver.py
src/codex_pdf/eval/: __init__.py  ps_type4.py
src/codex_pdf/extract/: __init__.py  annotations.py  color.py  common.py  conformance.py  content_inventory.py  dieline_detector.py  document.py  findings.py  fonts.py  forms.py  images.py  ocg.py  probe.py  signals.py  sparse.py  structure.py  summary.py  text_regions.py  transparency.py  trapping.py
src/codex_pdf/geom/: __init__.py  box.py  matrix.py  path.py  tile.py  units.py
src/codex_pdf/models/: __init__.py  v1.py
src/codex_pdf/preflight_ingest/: __init__.py  adapters.py
src/codex_pdf/render/: __init__.py  _common.py  content_stream.py  layer.py  page.py  separations.py
src/codex_pdf/speculator/: __init__.py  __main__.py  consumer.py
src/codex_pdf/vision/: __init__.py  __main__.py  app.py  client.py  phash.py
tests/: conftest.py  test_ai_phase1.py  test_ai_phase2.py  test_alt_space.py  test_api.py  test_cache.py  test_cli_contract.py  test_client_routing.py  test_color.py  test_extract_analysis_signals.py  test_extract_structural.py  test_geom.py  test_golden.py  test_golden_corpus.py  test_models.py  test_parity.py  test_pdf_sha256.py  test_preflight_ingest.py  test_produce_surface_audit.py  test_retention_consent.py  test_retention_integration.py  test_schema.py  test_schemas_all.py  test_speculator.py  test_summary_dieline.py  test_summary_spot_colors.py  test_vision.py
tests/golden/1.0.0/: reference.json
