[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-pdf"
version = "1.9.0"
description = "Authoritative, versioned PDF facts contract for Think Neverland tools."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Think Neverland", email = "dev@thinkneverland.com" }]
dependencies = [
  "pydantic>=2.8",
  "jsonschema>=4.23",
  "PyMuPDF>=1.24",
  "pikepdf>=9.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "gunicorn>=23.0",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
geom = [
    "pyclipr>=0.1.8",
]
retain = [
    "boto3>=1.34",
]

[project.scripts]
codex-pdf = "codex_pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_pdf"]

[tool.hatch.build.targets.wheel.force-include]
"src/codex_pdf/color/data/pantone_reference.json" = "codex_pdf/color/data/pantone_reference.json"
"src/codex_pdf/api/warmup.pdf" = "codex_pdf/api/warmup.pdf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
