[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-pdf"
version = "1.14.0"
description = "Authoritative, versioned PDF facts contract for Think Neverland tools."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Think Neverland", email = "dev@thinkneverland.com" }]
dependencies = [
  "pydantic>=2.8",
  "jsonschema>=4.23",
  "PyMuPDF>=1.24",
  "pikepdf>=9.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "gunicorn>=23.0",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  # HTTP client for outbound calls to codex-vision-sidecar (Phase 1.5)
  # and any future cross-service codex links. Lightweight; no native
  # extensions.
  "httpx>=0.27",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
geom = [
    "pyclipr>=0.1.8",
]
retain = [
    "boto3>=1.34",
]
ai = [
    # Anthropic SDK for Tier 1 (CPU + Claude) AI signal extractors.
    # Optional: a deployment without the [ai] extra installed emits
    # ``ai_missing_credentials`` instead of populating signal fields.
    "anthropic>=0.40",
    # Pillow for raster decode in the vision-extractor lane (logos,
    # symbols, barcodes). Already a transitive dep via PyMuPDF in many
    # environments; listed explicitly so [ai] is self-contained.
    "Pillow>=10.0",
]
ai-barcodes = [
    # Pure-CPU barcode decoders. Native libraries (zbar, libdmtx) must
    # be present at runtime — see codex-pdf-marketing's Dockerfile.
    "pyzbar>=0.1.9",
    "pylibdmtx>=0.1.10",
    "Pillow>=10.0",
]
vision = [
    # codex-vision-sidecar — CPU computer-vision extractors. Phase 1.5
    # ships perceptual hashing only (no model files); ONNX-backed
    # extractors (NudeNet, CLIP) land in subsequent releases. Install
    # this extra on the vision sidecar service; the main codex-pdf API
    # only needs httpx (already in base deps) to call into the sidecar.
    "imagehash>=4.3",
    "Pillow>=10.0",
    "httpx>=0.27",
]

[project.scripts]
codex-pdf = "codex_pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_pdf"]

[tool.hatch.build.targets.wheel.force-include]
"src/codex_pdf/color/data/pantone_reference.json" = "codex_pdf/color/data/pantone_reference.json"
"src/codex_pdf/api/warmup.pdf" = "codex_pdf/api/warmup.pdf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
